--- a/main.ipynb
+++ b/main.ipynb
@@ -197,57 +197,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def squared_module(arr):\n",
-    "    return np.multiply(arr, arr.conjugate()).real"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(501, 19) (19, 603)\n"
-     ]
-    }
-   ],
-   "source": [
-    "def init_params(X, S, mix, Kpart):\n",
-    "    F, N, J = S.shape\n",
-    "    W = []\n",
-    "    H = []\n",
-    "    for j in range(n_sources):\n",
-    "        model = skd.NMF(n_components=Kpart[j], init='random', random_state=0)\n",
-    "        s_2 = squared_module(S[:, :, j])\n",
-    "        W.append(model.fit_transform(s_2))\n",
-    "        H.append(model.components_)\n",
-    "    W = np.concatenate(tuple(W), axis=1)\n",
-    "    H = np.concatenate(tuple(H), axis=0)\n",
-    "    A = np.zeros((F, I, J), dtype=np.float)\n",
-    "    sigma_b = np.zeros((F, I, I), dtype=np.float)\n",
-    "    for f in range(F):\n",
-    "        Rxx[f] = r_hat(X[f])\n",
-    "        Rxs[f] = r_hat(X[f], S[f])\n",
-    "        Rss[f] = r_hat(S[f])\n",
-    "        A[f] = Rxs[f].dot(np.linalg.inv(Rss[f]))\n",
-    "        sigma_b[f] = np.diagonal(Rxx[f] - A[f].dot(Rxs[f].getH()) - Rxs[f].dot(A[f].getH()) + A[f].dot(Rss[f].dot(A[f].getH())))\n",
-    "    return A, W, H, sigma_b, H\n",
-    "\n",
-    "Kpart = [5, 6, 8]\n",
-    "K = np.sum(Kpart)\n",
-    "W, H = init_params(X, mix, Kpart, F, N)\n",
-    "print(W.shape, H.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
    "outputs": [
@@ -273,7 +222,12 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "Kpart = [5, 6, 8]\n",
+    "K = np.sum(Kpart)\n",
+    "A, W, H, sigma_b, H = em.init_params(X, S, mix, Kpart)\n",
+    "print(W.shape, H.shape)"
+   ]
   },
   {
    "cell_type": "markdown",
